--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "spring-medicines"]
 	path = spring-medicines
 	url = https://github.com/Greem4/spring-medicines.git
-	branch = lab
+	branch = master
 [submodule "spring-frontend"]
 	path = spring-frontend
 	url = https://github.com/Greem4/spring-frontend.git
-	branch = lab
+	branch = master
