--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - ./db_data:/var/lib/postgresql/data
     ports:
-    - "5432:5432"
+      - "5432:5432"
     networks:
       - app_network
 
@@ -18,29 +18,25 @@ services:
       context: ./spring-medicines
       dockerfile: Dockerfile
     container_name: app_back_medicine
-    ports:
-      - "8080:8080"
     environment:
       BASE_URL: ${BASE_URL}
       DB_URL: ${DB_URL}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
-
       MAIL_USERNAME: ${MAIL_USERNAME}
       MAIL_PASSWORD: ${MAIL_PASSWORD}
       MAIL_SET_FROM: ${MAIL_SET_FROM}
       MAIL_TO: ${MAIL_TO}
-
       JWT_SECRET: ${JWT_SECRET}
       JWT_EXPIRATION_MS: ${JWT_EXPIRATION_MS}
-
       YANDEX_CLIENT_ID: ${YANDEX_CLIENT_ID}
       YANDEX_CLIENT_SECRET: ${YANDEX_CLIENT_SECRET}
       YANDEX_REDIRECT_URI: ${YANDEX_REDIRECT_URI}
-
       SUCCESS_REDIRECT: ${SUCCESS_REDIRECT}
       FAILURE_REDIRECT: ${FAILURE_REDIRECT}
-
+      TZ: Europe/Moscow
+    ports:
+      - "127.0.0.1:8080:8080"
     depends_on:
       - db
     networks:
@@ -55,15 +51,17 @@ services:
         VITE_YANDEX_AUTH: ${VITE_YANDEX_AUTH}
     container_name: app_front_medicine
     ports:
-      - "3000:80"
+      - "8081:80"
     depends_on:
       - backend
-      - db
+    environment:
+      - TZ=Europe/Moscow
     networks:
       - app_network
 
-volumes:
-  db_data:
-
 networks:
   app_network:
+    driver: bridge
+
+volumes:
+  db_data:
