--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: bitnami/postgresql
+    image: postgres:17-alpine
     container_name: postgres_db
     environment:
       POSTGRES_USER: ${DB_USERNAME}
