update env and readme

--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,13 @@ DB_USERNAME=
 DB_PASSWORD=
 
 # mail
+SPRING_MAIL_HOST=
+SPRING_MAIL_PORT=
+SPRING_MAIL_USERNAME=
+SPRING_MAIL_PASSWORD=
+SPRING_MAIL_AUTH=
+SPRING_MAIL_STARTTLS_ENABLE=
+
 MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_SET_FROM=
