--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "5432:5432"
     networks:
       - app_network
+    restart: unless-stopped
 
   backend:
     build:
@@ -43,6 +44,7 @@ services:
       - db
     networks:
       - app_network
+    restart: unless-stopped
 
   frontend:
     build:
@@ -60,6 +62,7 @@ services:
       - TZ=Europe/Moscow
     networks:
       - app_network
+    restart: unless-stopped
 
 networks:
   app_network:
