--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,21 @@ services:
       timeout: 5s
       retries: 5
 
+  rabbitmq:
+    image: rabbitmq:3.9-management-alpine
+    container_name: rabbitmq_medicines
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBIT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBIT_PASS}
+      RABBITMQ_VM_MEMORY_HIGH_WATERMARK: "0.4"
+      TZ: Europe/Moscow
+    mem_limit: 512m
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - app_network
+    restart: unless-stopped
 
   backend:
     build:
@@ -54,6 +69,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      rabbitmq:
+        condition: service_started
     restart: unless-stopped
     security_opt:
       - no-new-privileges:true
@@ -84,6 +101,8 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+    networks:
+      - app_network
 
 networks:
   app_network:
